Update minestom core